--- a/Dashboard.html
+++ b/Dashboard.html
@@ -10,5 +10,6 @@
     <h1>ยินดีต้อนรับเข้าสู่....</h1>
     <p>dofiighjea[oigjawraoprigao[iwrg'arjgoighj]</p>
     <div>lskduejfbaewr;jgn;KL</div>
+    <div>inging</div>
 </body>
 </html>
